...
        exit.cancelsTouchesInView = false
        exit.delegate = self
        canvas.addGestureRecognizer(exit)
        if kind == .border {
            let modelTitle = UILabel()
            modelTitle.text = DeviceModel.borderTitle
            modelTitle.accessibilityIdentifier = "test.border.deviceTitle"
            modelTitle.font = UIFontMetrics(forTextStyle: .headline).scaledFont(for: .systemFont(ofSize: 20, weight: .semibold))
            modelTitle.adjustsFontForContentSizeCategory = true
            modelTitle.textColor = Preferences.shared.color
            modelTitle.numberOfLines = 0
            modelTitle.textAlignment = .center
            let details = UILabel()
...
